fix hero image grainy on mobile

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -2,10 +2,10 @@
     background-image: url("../images/the_universe.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+    /* background-size: 100%; */
+    /* background-position: center; */
     display: flex;
-    min-height: 600px;
+    min-height: 600px; 
 }
 
 .hero-text {
